--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "moment": "^2.19",
     "vue": "^2.5.3",
+    "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
-    "vuetify": "^0.17.4"
+    "vuetify": "^0.17.4",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
