--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "moment": "^2.19",
     "vue": "^2.5.3",
+    "vue-google-signin-button": "^1.0.2",
     "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
     "vuetify": "^0.17.4",
