--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 .DS_Store
 node_modules/
-/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /test/unit/coverage/
 /test/e2e/reports/
 selenium-debug.log
+
+# don't commit the runtime config file
+/static/config.js
 
 # Editor directories and files
 .idea
