--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ncodr-ui",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Front-End Web UI for ncodr",
   "author": "Ian Martin <ian@imartin.net>",
   "license": "MIT",
@@ -36,6 +36,7 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "es6-promise": "^4.1",
     "eslint": "^3.19.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
