--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,5 @@
 {
   "presets": [
-    ["env", {
-      "modules": false
-    }],
-    "stage-2"
-  ],
-  "plugins": ["transform-runtime"],
-  "env": {
-    "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": ["istanbul"]
-    }
-  }
+    "@vue/app"
+  ]
 }
