--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ before_script:
 
 script:
   - npm run lint
-  - npm run unit
+  - npm run test
 # test that we haven't forgotten to build to dist/
-  - (( $(git log -n1 --format=%at -- dist/) > $(git log -n1 --format=%at -- src/) ))
+  - (( $(git log -n1 --format=%at -- dist/) >= $(git log -n1 --format=%at -- src/) ))
 # e2e tests don't run on travis-ci
 # need to set up sauce labs
   - npm run build
