--- a/package.json
+++ b/package.json
@@ -6,93 +6,35 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-    "build": "node build/build.js"
+    "serve": "vue-cli-service serve --open",
+    "build": "vue-cli-service build",
+    "test": "vue-cli-service test",
+    "e2e": "vue-cli-service e2e",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "moment": "^2.22.0",
+    "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
-    "vue-google-signin-button": "^1.0.2",
-    "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.12",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vue-resource": "^1.5.0",
+    "vue-google-signin-button": "^1.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.6",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-add-filehash": "^6.9.8",
-    "babel-plugin-istanbul": "^4.1.6",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "@vue/cli-plugin-babel": "^3.0.0-beta.9",
+    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-beta.9",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.9",
+    "@vue/cli-plugin-pwa": "^3.0.0-beta.9",
+    "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.9",
+    "@vue/cli-service": "^3.0.0-beta.9",
+    "@vue/eslint-config-airbnb": "^3.0.0-beta.9",
+    "@vue/test-utils": "^1.0.0-beta.10",
     "chai": "^4.1.2",
-    "chalk": "^2.3.2",
-    "chromedriver": "^2.37.0",
-    "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.1.4",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.11",
-    "es6-promise": "^4.2.4",
-    "eslint": "^4.15.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-webpack": "^0.8.4",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^4.0.1",
-    "eslint-plugin-import": "^2.10.0",
-    "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.11",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "inject-loader": "^3.0.0",
-    "karma": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^2.0.13",
-    "mocha": "^4.1.0",
-    "nightwatch": "^0.9.20",
-    "node-notifier": "^5.2.1",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.4.0",
-    "phantomjs-prebuilt": "^2.1.14",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.3",
-    "rimraf": "^2.6.0",
-    "selenium-server": "^3.11.0",
-    "semver": "^5.5.0",
-    "shelljs": "^0.8.0",
-    "sinon": "^4.5.0",
-    "sinon-chai": "^2.8.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "url-loader": "^0.6.2",
-    "vue-loader": "^13.7.1",
-    "vue-style-loader": "^3.1.2",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^3.11.0",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-dev-server": "^2.11.2",
-    "webpack-merge": "^4.1.2"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "vue-template-compiler": "^2.5.13",
+    "vuetify": "^1.0.12",
+    "moment": "^2.22.0"
   },
   "browserslist": [
     "> 1%",
