--- a/package.json
+++ b/package.json
@@ -13,28 +13,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "register-service-worker": "^1.0.0",
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vue-resource": "^1.5.0",
-    "vue-google-signin-button": "^1.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.9",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-beta.9",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.9",
-    "@vue/cli-plugin-pwa": "^3.0.0-beta.9",
-    "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.9",
-    "@vue/cli-service": "^3.0.0-beta.9",
-    "@vue/eslint-config-airbnb": "^3.0.0-beta.9",
-    "@vue/test-utils": "^1.0.0-beta.10",
+    "register-service-worker": "^1.4.0",
+    "vue": "^2.5.16",
+    "vue-google-signin-button": "^1.0.2",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
+    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
+    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-beta.15",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
+    "@vue/cli-plugin-pwa": "^3.0.0-beta.15",
+    "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.15",
+    "@vue/cli-service": "^3.0.0-beta.15",
+    "@vue/eslint-config-airbnb": "^3.0.0-beta.15",
+    "@vue/test-utils": "^1.0.0-beta.16",
     "chai": "^4.1.2",
+    "moment": "^2.22.2",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "vue-template-compiler": "^2.5.13",
-    "vuetify": "^1.0.12",
-    "moment": "^2.22.0"
+    "vuetify": "^1.0.18"
   },
   "browserslist": [
     "> 1%",
