--- a/package.json
+++ b/package.json
@@ -12,29 +12,28 @@
     "e2e": "vue-cli-service e2e",
     "lint": "vue-cli-service lint"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.0.0-rc.2",
+    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-rc.2",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.2",
+    "@vue/cli-plugin-pwa": "^3.0.0-rc.2",
+    "@vue/cli-plugin-unit-mocha": "^3.0.0-rc.2",
+    "@vue/cli-service": "^3.0.0-rc.2",
+    "@vue/eslint-config-airbnb": "^3.0.0-rc.2",
+    "@vue/test-utils": "^1.0.0-beta.19",
+    "chai": "^4.1.2",
+    "moment": "^2.22.2",
+    "node-sass": "^4.7.2",
     "register-service-worker": "^1.4.0",
+    "sass-loader": "^7.0.2",
     "vue": "^2.5.16",
     "vue-google-signin-button": "^1.0.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-    "@vue/cli-plugin-pwa": "^3.0.0-beta.15",
-    "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
-    "@vue/eslint-config-airbnb": "^3.0.0-beta.15",
-    "@vue/test-utils": "^1.0.0-beta.16",
-    "chai": "^4.1.2",
-    "moment": "^2.22.2",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^7.0.2",
     "vue-template-compiler": "^2.5.13",
-    "vuetify": "^1.0.18"
+    "vuetify": "^1.0.19",
+    "vuex": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
