upgrade of vue-cli tooling

--- a/package.json
+++ b/package.json
@@ -8,31 +8,31 @@
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "test": "vue-cli-service test",
-    "e2e": "vue-cli-service e2e",
+    "test": "vue-cli-service test:unit",
+    "e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {},
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.2",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-rc.2",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.2",
-    "@vue/cli-plugin-pwa": "^3.0.0-rc.2",
-    "@vue/cli-plugin-unit-mocha": "^3.0.0-rc.2",
-    "@vue/cli-service": "^3.0.0-rc.2",
-    "@vue/eslint-config-airbnb": "^3.0.0-rc.2",
-    "@vue/test-utils": "^1.0.0-beta.19",
-    "chai": "^4.1.2",
+    "@vue/cli-plugin-babel": "^3.0.4",
+    "@vue/cli-plugin-e2e-nightwatch": "^3.0.4",
+    "@vue/cli-plugin-eslint": "^3.0.4",
+    "@vue/cli-plugin-pwa": "^3.0.4",
+    "@vue/cli-plugin-unit-mocha": "^3.0.4",
+    "@vue/cli-service": "^3.0.3",
+    "@vue/eslint-config-airbnb": "^3.0.4",
+    "@vue/test-utils": "^1.0.0-beta.25",
+    "chai": "^4.2.0",
     "moment": "^2.22.2",
-    "node-sass": "^4.7.2",
-    "register-service-worker": "^1.4.0",
+    "node-sass": "^4.9.3",
+    "register-service-worker": "^1.5.2",
     "sass-loader": "^7.0.2",
-    "vue": "^2.5.16",
+    "vue": "^2.5.17",
     "vue-google-signin-button": "^1.0.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vue-template-compiler": "^2.5.13",
-    "vuetify": "^1.0.19",
+    "vue-template-compiler": "^2.5.17",
+    "vuetify": "^1.2.5",
     "vuex": "^3.0.1"
   },
   "browserslist": [
