--- a/package.json
+++ b/package.json
@@ -14,26 +14,32 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.4",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.0.4",
-    "@vue/cli-plugin-eslint": "^3.0.4",
-    "@vue/cli-plugin-pwa": "^3.0.4",
-    "@vue/cli-plugin-unit-mocha": "^3.0.4",
-    "@vue/cli-service": "^3.0.3",
-    "@vue/eslint-config-airbnb": "^3.0.4",
-    "@vue/test-utils": "^1.0.0-beta.25",
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-e2e-nightwatch": "^3.3.0",
+    "@vue/cli-plugin-eslint": "^3.3.0",
+    "@vue/cli-plugin-pwa": "^3.3.0",
+    "@vue/cli-plugin-unit-mocha": "^3.3.0",
+    "@vue/cli-service": "^3.3.1",
+    "@vue/eslint-config-airbnb": "^3.0.5",
+    "@vue/test-utils": "^1.0.0-beta.28",
     "chai": "^4.2.0",
-    "moment": "^2.22.2",
-    "node-sass": "^4.9.3",
+    "css-loader": "^2.1.0",
+    "moment": "^2.24.0",
+    "node-sass": "^4.11.0",
     "register-service-worker": "^1.5.2",
     "sass-loader": "^7.0.2",
-    "vue": "^2.5.17",
+    "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "vue": "^2.5.22",
     "vue-google-signin-button": "^1.0.2",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1",
-    "vue-template-compiler": "^2.5.17",
-    "vuetify": "^1.2.5",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.0.2",
+    "vue-template-compiler": "^2.5.22",
+    "vuetify": "^1.4.3",
+    "vuetify-loader": "^1.1.1",
+    "vuex": "^3.1.0",
+    "webpack-bundle-analyzer": "^3.0.3"
   },
   "browserslist": [
     "> 1%",
