--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "test": "vue-cli-service test:unit",
+    "cover": "cross-env NODE_ENV=coverage nyc npm run test",
     "e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
@@ -23,9 +24,12 @@
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "chai": "^4.2.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
+    "nyc": "^13.3.0",
     "register-service-worker": "^1.6.2",
     "sass-loader": "^7.0.2",
     "style-loader": "^0.23.1",
